--- a/styles/hero.css
+++ b/styles/hero.css
@@ -57,15 +57,18 @@
   background-color: #e0e0e0;
 }
 
-.fb-icon-button {
+.media-icons {
   position: absolute;
   top: 50%;
   left: 20px;
   transform: translateY(-50%);
+  flex-direction: column;
+  display: flex;
+  gap: 12px;
   z-index: 3;
 }
 
-.fb-icon-button img {
+.media-icons img {
   width: 40px;
   height: 40px;
   filter: drop-shadow(0 0 3px rgba(0,0,0,0.5));
